<resources>
    <string name="app_name">Appello</string>
    <string name="title_activity_registrazione">Registrazione</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="or">or</string>

    <string name="preferences_name" translatable="false">com.example.luca.preference-file-key</string>


    <string name="login_welcome_title">Benvenuto!</string>
    <string name="login_welcome_text">Hai già un account? Esegui il login!</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="sign_in_facebook">sign in with facebook</string>
    <string name="login_new_account">Nuovo account?</string>
    <string name="login_signin_text">Effettua il login!</string>
    <string name="login_signup_text">Non hai un account? Registrati!</string>
    <string name="password">Password</string>
    <string name="nome_corso">nome corso</string>
    <string name="email">E-mail</string>
    <string name="tutorial_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed dolore magna aliquam erat volutpat.</string>
    <string name="next">next</string>
    <string name="demo_label">Ciao, Ciccio!! Usa lo switch</string>
    <string name="no_permissions">No permissions</string>
    <string name="error">error:</string>
    <string name="add_boarding_pass">add boarding pass</string>
    <string name="ar_label">AR</string>
    <string name="boarding_pass_label">Add your flight information to see the boarding pass</string>

    <string name="facebook_app_id">2270926746570408</string>
    <string name="fb_login_protocol_scheme">fb2270926746570408</string>
    <string name="login_error">Username and/or password incorrect</string>
    <string name="login_create_account">Sign up</string>
    <string name="preference_file_key">airmapp.sp</string>
    <string name="loading">Caricamento mappa in corso. Attendere...</string>
    <string name="controllo_credenziali">Controllo credenziali in corso</string>
    <string name="not_valid_credentials">Credenziali non valide</string>
    <string name="anno_corso">anno corso</string>
    <string name="statistiche">Statistics</string>
    <string name="appello">Appello</string>
    <string name="rinomina">Rinomina</string>
    <string name="eliminao">Elimina</string>
    <string name="to_reset_password_enter_your_email_press_the_button_and_check_mail_to_follow_instruction">To reset password, enter your email, press the button and check mail to follow instruction.</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="reset_password">Reset password</string>
    <string name="riprova">riprova</string>
    <string name="conferma">conferma</string>
    <string name="ricerca_appello">Scanning for beacons...</string>
    <string name="title_activity_profilo_utente">Profilo</string>
    <string name="open_navigation_drawer">open Navigation Drawer</string>
    <string name="close_navigation_drawer">close Navigation Drawer</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="change_profile_image">Change profile image</string>
    <string name="title_activity_professor_profile">ProfessorProfile</string>
    <string name="courseList">Course list</string>
    <string name="about">About</string>
    <string name="student_list">Student List</string>
    <string name="close_appello">Close appello</string>
    <string name="change_password_text">To change the password you must first enter the current password, and then type the new password twice</string>
    <string name="new_password">new password</string>
    <string name="new_password_again">new password (again)</string>
    <string name="change_password">change password</string>
    <string name="current_password">current password</string>
    
    <string name="altbeacon_pattern">m:2-3=beac,i:4-19,i:20-21,i:22-23,p:24-24,d:25-25</string>
    <string name="ibeacon_pattern">m:2-3=0215,i:4-19,i:20-21,i:22-23,p:24-24</string>
</resources>
