<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.example.luca.biometricsystem.biometricsystem.SignUpFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="92dp"
        android:background="@drawable/bubble"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:textColorHint="#8effffff"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#8effffff"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="#ffffff" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/bubble"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:textColorHint="#8effffff"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#FFFFFF">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#8effffff"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="#ffffff" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/forgot_password"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="#ffffff" />
</LinearLayout>