<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reset_password_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="com.luca.sabatini.appello.login.ChangePassword">

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="132dp"
        android:background="@drawable/bg_button_white"
        android:onClick="changePasswordButton"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/change_password"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/current_password_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:theme="@style/EditTextThemeLogin"
        app:boxBackgroundColor="@color/colorAccent"
        app:boxStrokeColor="@color/colorPrimaryDark"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimaryDark">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/change_password_text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_again_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:theme="@style/EditTextThemeLogin"
        app:boxBackgroundColor="@color/colorAccent"
        app:boxStrokeColor="@color/colorPrimaryDark"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/change_password_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_password_input_layout"
        app:layout_constraintVertical_bias="0.0"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimaryDark">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/new_password_again"
            android:inputType="textPassword"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"

        android:layout_marginEnd="32dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:theme="@style/EditTextThemeLogin"
        app:boxBackgroundColor="@color/colorAccent"
        app:boxStrokeColor="@color/colorPrimaryDark"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_password_input_layout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimaryDark">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>